Testing to fix scroll on iPhone

--- a/style.css
+++ b/style.css
@@ -162,7 +162,9 @@ hr.main {
 }
 
 select, option {
-  -webkit-appearance: none;
+/*  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;*/
 }
 
 .dropdown-toggle, #searchButton {
@@ -207,6 +209,21 @@ h2 {
   border-color: black;
   border-radius: 4px;
   color: black;
+}
+
+.default {
+  font-size: 15pt !important;
+  /* opacity: 0; */
+  display: block;
+  width: 100%;
+  padding: .25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
 }
 
 .dropdown-item {
